deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: saththir-cisco-app
  name: saththir-cisco-app
  namespace: saththirns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: saththir-cisco-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: saththir-cisco-app
    spec:
      containers:
      - image: tsgoutham/saththirwebapp:ciscov1
        name: saththirwebapp
        ports:
        - containerPort: 80
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 200M
          limits:
            cpu: 200m
            memory: 300M
status: {}
