route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saththir-route-rule-1
  namespace: saththirns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: www.saththir.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: saththirfinal
            port:
              number: 80
